# rubicon-objc

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .rumdl.toml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_status.yml  ci.yml  config-file-deps-bump.yml  dependabot-changenote.yml  publish.yml  release.yml
.specify/memory/: constitution.md
changes/: 118.doc.rst  123.bugfix.rst  125.bugfix.rst  139.removal.rst  143.misc.rst  145.feature.rst  145.misc.rst  146.bugfix.rst  147.doc.rst  148.feature.rst  153.bugfix.1.rst  153.bugfix.2.rst  155.misc.rst  156.bugfix.rst  156.feature.rst  157.bugfix.rst  158.misc.rst  159.misc.rst  162.feature.rst  164.misc.rst  170.bugfix.rst  173.misc.rst  174.feature.rst  174.removal.rst  175.removal.rst  177.bugfix.rst  177.feature.rst  177.removal.rst  178.misc.rst  179.misc.rst  181.feature.rst  182.bugfix.rst  183.bugfix.rst  183.removal.rst  185.misc.rst  189.misc.rst  193.feature.rst  194.misc.rst  195.feature.rst  196.misc.rst  (+135 more)
docs/: Makefile  conf.py  config.yml  index.rst  mkdocs.en.yml  requirements_docs.txt  spelling_wordlist
docs/_mocked_modules/ctypes/: __init__.py  util.py
docs/about/: releases.rst
docs/background/: community.rst  faq.rst  index.rst  releases.rst  roadmap.rst  rubicon.rst  success.rst
docs/en/: SUMMARY.md  index.md  index.rst
docs/en/about/: community.md  community.rst  faq.md  index.md  index.rst  releases.md  releases.rst  roadmap.md  roadmap.rst  success.md  success.rst
docs/en/how-to/: get-started.md  get-started.rst  index.md  index.rst
docs/en/how-to/contribute/: code.md  code.rst  docs.md  docs.rst  index.md  index.rst
docs/en/how-to/internal/: index.md  index.rst  release.md
docs/en/reference/: index.md  index.rst  rubicon-objc-api.md  rubicon-objc-api.rst  rubicon-objc-eventloop.md  rubicon-objc-runtime.md  rubicon-objc-runtime.rst  rubicon-objc-types.md  rubicon-objc-types.rst  rubicon-objc.md  rubicon-objc.rst
docs/en/topics/: async.md  async.rst  c-functions.md  index.md  memory-management.md  protocols.md  type-mapping.md  type-mapping.rst
docs/en/tutorial/: index.md  index.rst  tutorial-0.md  tutorial-1.md  tutorial-1.rst  tutorial-2.md  tutorial-2.rst
docs/how-to/: async.rst  c-functions.rst  contribute-code.rst  contribute-docs.rst  contribute.rst  get-started.rst  index.rst  memory-management.rst  protocols.rst  type-mapping.rst
docs/how-to/contribute/: code.rst
docs/how-to/internal/: release.rst
docs/project/: releases.rst
docs/reference/: index.rst  rubicon-objc-api.rst  rubicon-objc-eventloop.rst  rubicon-objc-runtime.rst  rubicon-objc-types.rst  rubicon-objc.rst
docs/topic/: index.rst  memory-management.rst  type-mapping.rst
docs/topics/: c-functions.rst  index.rst
docs/tutorial/: index.rst  tutorial-1.rst  tutorial-2.rst  tutorial-3.rst
rubicon/: __init__.py
rubicon-stubs/: rubicon-stubs.pyi
rubicon/objc/: __init__.py  api.py  async.py  collections.py  core_foundation.py  ctypes_patch.py  eventloop.py  objc.py  runtime.py  types.py
src/rubicon/objc/: __init__.py  api.py  collections.py  ctypes_patch.py  eventloop.py  runtime.py  types.py
stubs/rubicon-stubs/objc/api/: __init__.pyi
stubs/rubicon-stubs/objc/runtime/: __init__.pyi
stubs/rubicon-stubs/objc/types/: __init__.pyi
tests/: __init__.py  conftest.py  test_NSArray.py  test_NSDictionary.py  test_NSString.py  test_ObjCClass.py  test_ObjCInstance.py  test_ObjCMetaClass.py  test_ObjCProtocol.py  test_async.py  test_blocks.py  test_const.py  test_core.py  test_ctypes_patch.py  test_field.py  test_method.py  test_partial_method.py  test_rubicon.py  test_send_message.py  test_super.py  test_threads.py  test_types.py
tests/objc/: Altered_Example.h  Altered_Example.m  BaseExample.h  BaseExample.m  Blocks.h  Blocks.m  Callback.h  DescriptionTester.h  DescriptionTester.m  Example.h  Example.m  Makefile  Protocols.h  SpecificExample.h  SpecificExample.m  Thing.h  Thing.m
types/: rubicon-objc-types.pyi
