[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools_scm==8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "rubicon-objc"
description = "A bridge between an Objective C runtime environment and Python."
readme = "README.rst"
requires-python = ">= 3.9"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "macOS",
    "iOS",
    "Objective C",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Objective C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://beeware.org/rubicon"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://rubicon-objc.readthedocs.io/en/latest/"
Tracker = "https://github.com/beeware/rubicon-objc/issues"
Source = "https://github.com/beeware/rubicon-objc"

[project.optional-dependencies]
dev = [
    "pre-commit == 4.2.0",
    "pytest == 8.4.1",
    "setuptools_scm == 8.3.1",
    "tox == 4.28.4",
]
# Docs are always built on a specific Python version; see RTD and tox config files,
# and the docs contribution guide.
docs = [
    # Docs requirements are *mostly* handled by the `docs` extra; but we can't include
    # the theme that way, so the theme is installed using a requirements.txt file,
    # independent of the docs extra. Ideally, we'd use dependency groups for docs
    # dependencies, but RTD doesn't support them yet. In addition to these dependencies,
    # you should also run `pip install -r ../requirements-docs.txt`
    "furo == 2025.7.19",
    "pyenchant == 3.2.2",
    "sphinx == 8.2.3",
    "sphinx_tabs == 3.4.7",
    "sphinx-autobuild == 2024.10.3",
    "sphinx-copybutton == 0.5.2",
    "sphinxcontrib-spelling == 8.0.1",
]

[tool.codespell]
skip = ".git,*.pdf,*.svg"
# the way to make case sensitive skips of words etc
ignore-regex = "\bNd\b"
ignore-words-list = "re-use,assertIn"

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.towncrier]
directory = "changes"
package = "rubicon.objc"
filename = "docs/about/releases.rst"
title_format = "{version} ({project_date})"
template = "changes/template.rst"
type = [
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "removal", name = "Backward Incompatible Changes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Misc", showcontent = false },
]
