[build-system]
requires = [
    "setuptools==82.0.0",
    "setuptools_scm==9.2.2",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "rubicon-objc"
description = "A bridge between an Objective C runtime environment and Python."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "macOS",
    "iOS",
    "Objective C",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Objective C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://beeware.org/rubicon"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://rubicon-objc.readthedocs.io/en/latest/"
Tracker = "https://github.com/beeware/rubicon-objc/issues"
Source = "https://github.com/beeware/rubicon-objc"

[dependency-groups]
pre-commit = [
    "pre-commit == 4.5.1",
]

setuptools-scm = [
    "setuptools_scm == 9.2.2",
]

towncrier = [
    "towncrier==25.8.0",
]

tox-uv = [
    "tox-uv == 1.29.0",
]

test = [
    "pytest == 9.0.2",
]

dev = [
    {include-group = "pre-commit"},
    {include-group = "setuptools-scm"},
    {include-group = "tox-uv"},
]

# Docs are always built on a specific Python version; see RTD and tox config files,
# and the docs contribution guide.
docs = [
    "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
]

[tool.codespell]
skip = ".git,*.pdf,*.svg"
# the way to make case-sensitive skips of words etc
ignore-regex = "\bNd\b"
ignore-words-list = "re-use,assertIn"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]

[tool.rumdl]
flavor = "mkdocs"
include = ["**/*.md"]
exclude = []
respect-gitignore = true
force-exclude = true

# Disable rules:
# MD013: Line length - flagging on mkdocstrings content
# MD014: Forces commands in codeblocks to show output
# MD042: Empty link - buggy, still flagging on valid MkDocs formatting
# MD052: Reference link not found - buggy, flagging on valis MkDocs links
disable = ["MD013", "MD014", "MD042", "MD052"]

[tool.rumdl.per-file-ignores]
"changes/**/*.md" = ["MD041"]

#[MD013]  # Line length
#line_length = 999999  # Force reflow to paragraph content to remove linebreaks
#reflow = true
#reflow_mode = "normalize"

[tool.rumdl.MD026]  # Remove punctuation at the end of headings
punctuation = ",;:"

[tool.rumdl.MD033]  # No inline HTML
allowed_elements = ["nospell",]  # pyspelling inline disable tag

[tool.rumdl.MD046]
style = "fenced"

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.towncrier]
directory = "changes"
package = "rubicon.objc"
filename = "docs/en/about/releases.md"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/beeware/rubicon-objc/issues/{issue})"
template = "changes/template.md"
type = [
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "removal", name = "Backward Incompatible Changes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Misc", showcontent = false },
]
