[metadata]
name = rubicon-objc
url = https://beeware.org/rubicon
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = https://rubicon-objc.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/rubicon-objc/issues
    Source = https://github.com/beeware/rubicon-objc
author = Russell Keith-Magee
author_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Objective C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
license = New BSD
license_files =
    LICENSE
description = A bridge between an Objective C runtime environment and Python.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.7
packages = find_namespace:
package_dir =
    = src
install_requires =
    # We need importlib.metadata.version, added in Python 3.8
    importlib_metadata >= 4.4; python_version < "3.8"

[options.packages.find]
where = src
include = rubicon.*

[options.extras_require]
dev =
    # Pre-commit 3.0 dropped support for Python 3.7
    pre-commit == 2.21.0; python_version < "3.8"
    pre-commit == 3.3.2; python_version >= "3.8"
    pytest == 7.3.1
    pytest-tldr == 0.2.5
    setuptools_scm[toml] == 7.1.0
    tox == 4.5.1
docs =
    furo == 2023.5.20
    pyenchant == 3.2.2
    sphinx == 7.0.1
    sphinx_tabs == 3.4.1
    sphinx-autobuild == 2021.3.14
    sphinx-copybutton == 0.5.2
    sphinxcontrib-spelling == 8.0.0

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv*/*,\
    local/*,\
    .tox/*
max-line-length = 119
extend-ignore =
    # whitespace before :
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
