[metadata]
name = rubicon-objc
url = https://beeware.org/rubicon
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = https://rubicon-objc.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/rubicon-objc/issues
    Source = https://github.com/beeware/rubicon-objc
author = Russell Keith-Magee
author_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Objective C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
license = New BSD
license_files =
    LICENSE
description = A bridge between an Objective C runtime environment and Python.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.8
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src
include = rubicon.*

[options.extras_require]
dev =
    pre-commit == 3.4.0
    pytest == 7.4.1
    pytest-tldr == 0.2.5
    setuptools_scm[toml] == 7.1.0
    tox == 4.11.1
docs =
    furo == 2023.8.19
    pyenchant == 3.2.2
    # Sphinx 7.2 deprecated support for Python 3.8
    sphinx == 7.1.2 ; python_version < '3.9'
    sphinx == 7.2.5 ; python_version >= '3.9'
    sphinx_tabs == 3.4.1
    sphinx-autobuild == 2021.3.14
    sphinx-copybutton == 0.5.2
    sphinxcontrib-spelling == 8.0.0

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv*/*,\
    local/*,\
    .tox/*
max-line-length = 119
extend-ignore =
    # whitespace before :
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
